# BBS_Database

./: .env.example  .gitignore  NEO4J_QUICKSTART.md  README.md  README_CH.md  README_ch.md  acceptance_demo.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
config/: routing.yaml  stopwords_zh.txt
docs/: build_pipeline.md  design.md  retrieval_algorithm.md  semantic.md
scripts/: bootstrap.ts  debug-section-keys.ts  debug-tree.ts  dev-up.ps1  eval_self_routing.py  inspect.ts  rebuild_index.py  reset.ts  sync-threads.ts  visualize.ts
src/: config.ts  factory.ts  index.ts
src/bbs_database/: api.py  config.py  ingest.py  reader.py
src/embed/: index.ts  stub.ts  types.ts
src/graph/: bootstrap.ts  driver.ts  ops.ts  schema.ts  sync.ts  types.ts
src/search/: index.ts  null.ts  types.ts
src/sqlite/: reader.ts
src/visualize/: index.ts  neo4j-browser.ts  types.ts
tests/: config.test.ts  conftest.py  factory.test.ts  golden_queries.yaml  test_api.py  test_classical_score.py  test_config.py  test_config_v2.py  test_cooccur.py  test_embed_client.py  test_entities.py  test_errors.py  test_eval_self_routing.py  test_fts.py  test_golden.py  test_hybrid_find_forums.py  test_ingest_threads.py  test_keywords.py  test_parse_query.py  test_pipeline.py  test_pipeline_v2.py  test_reader.py  test_rebuild_index_cli.py  test_rebuild_index_v2.py  test_schema.py  test_schema_v2.py  test_search_threads.py  test_similar.py  test_thread_detail.py  test_tokenize.py  test_types.py  test_vector_cache.py  test_vector_rank.py  test_vectors_build.py
(+26 files in other folders)
