[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bbs-database"
version = "0.1.0"
description = "Forum-level knowledge-graph index and routing on top of BBS_Crawler"
requires-python = ">=3.10"
dependencies = [
  "jieba>=0.42",
  "PyYAML>=6.0",
  "numpy>=1.24",
  "openai>=1.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
